--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
-    "feather-icons-react": "^0.5.0",
+    "feather-icons-react": "0.5.0",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
