--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-countup": "^6.3.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
-    "simplebar-react": "^2.4.1"
+    "simplebar-react": "^2.4.1",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
