--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
     "simplebar-react": "^2.4.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
