--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "feather-icons-react": "0.5.0",
+    "formik": "^2.2.9",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "sass": "^1.54.9",
     "simplebar-react": "^2.4.1",
     "styled-components": "^5.3.6",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
