--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-countup": "^6.3.1",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-flatpickr": "^3.10.13",
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
     "simplebar-react": "^2.4.1",
