--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "@types/react-flatpickr": "^3.8.7",
     "autoprefixer": "10.4.5",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
