--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.2.1",
     "feather-icons-react": "0.5.0",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
@@ -26,6 +27,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
+    "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
     "simplebar-react": "^2.4.1",
