--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-countup": "^6.3.1",
+    "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-flatpickr": "^3.10.13",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "18.0.6",
     "@types/react-flatpickr": "^3.8.7",
     "autoprefixer": "10.4.5",
