--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "feather-icons-react": "0.5.0",
+    "firebase": "^9.13.0",
     "formik": "^2.2.9",
     "lord-icon-element": "^3.4.4",
     "lottie-web": "^5.9.6",
@@ -29,6 +30,7 @@
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
