Dev Agregado de Invoices 1.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,9 @@
       "@firebase": [
         "firebase.js"
       ],
+      "@lib/*": [
+        "lib/*"
+      ],
     }
   },
   "include": ["next-env.d.ts", "api/**/*.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"],
