--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "feather-icons-react": "0.5.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
+    "jsbarcode": "^3.11.5",
     "lord-icon-element": "^3.4.4",
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
