--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "apexcharts": "^3.36.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "chart.js": "^4.0.1",
     "feather-icons-react": "0.5.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
@@ -29,6 +31,8 @@
     "next": "12.3.1",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.0.1",
     "react-countup": "^6.3.1",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
