--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.4",
     "next": "12.3.1",
     "next-auth": "^4.10.3",
+    "papaparse": "^5.4.0",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.0.1",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/node": "18.7.18",
+    "@types/papaparse": "^5.3.7",
     "@types/react": "18.0.20",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "18.0.6",
