--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-countup": "^6.3.1",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
