--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "chart.js": "^4.0.1",
+    "exceljs": "^4.4.0",
     "feather-icons-react": "0.5.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
