--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
