--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
     "simplebar-react": "^2.4.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^5.3.6",
     "swr": "^1.3.0",
     "yup": "^0.32.11"
