--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -23,10 +24,10 @@
     "proseWrap": "preserve"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.5",
     "apexcharts": "^3.36.3",
-    "axios": "^0.27.2",
-    "bootstrap": "^5.2.1",
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.5",
     "chart.js": "^4.0.1",
     "exceljs": "^4.4.0",
     "feather-icons-react": "0.5.0",
