--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "lord-icon-element": "^3.4.4",
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
-    "next": "12.3.1",
+    "next": "^13.5.11",
     "next-auth": "^4.10.3",
     "papaparse": "^5.4.0",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
     "react-countup": "^6.3.1",
     "react-csv": "^2.2.2",
     "react-data-table-component": "^7.5.3",
     "react-debounce-input": "^3.3.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
     "react-select": "^5.8.0",
@@ -66,7 +66,7 @@
     "@types/react-flatpickr": "^3.8.7",
     "autoprefixer": "10.4.5",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.5.11",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "typescript": "4.8.3"
