--- a/package.json
+++ b/package.json
@@ -58,17 +58,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "18.7.18",
+    "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.7",
-    "@types/react": "18.0.20",
+    "@types/react": "^19.1.4",
     "@types/react-csv": "^1.1.3",
-    "@types/react-dom": "18.0.6",
+    "@types/react-dom": "^19.1.5",
     "@types/react-flatpickr": "^3.8.7",
     "autoprefixer": "10.4.5",
     "eslint": "8.23.1",
     "eslint-config-next": "^14.2.28",
     "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "typescript": "4.8.3"
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.3"
   }
 }
