--- a/package.json
+++ b/package.json
@@ -9,20 +9,6 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
-  "prettier": {
-    "trailingComma": "es5",
-    "tabWidth": 2,
-    "semi": false,
-    "singleQuote": true,
-    "jsxSingleQuote": true,
-    "printWidth": 250,
-    "useTabs": false,
-    "bracketSpacing": true,
-    "bracketSameLine": true,
-    "singleAttributePerLine": false,
-    "arrowParens": "always",
-    "proseWrap": "preserve"
-  },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
     "apexcharts": "^3.36.3",
@@ -47,7 +33,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
-    "react-select": "^5.8.0",
+    "react-select": "^5.10.1",
     "react-toastify": "^9.0.8",
     "reactstrap": "^9.1.4",
     "sass": "^1.54.9",
@@ -58,6 +44,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.7",
     "@types/react": "^19.1.4",
