--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.7",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.4",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^19.1.5",
