--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
     "postcss": "^8.4.16",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3"
-  }
+  },
+  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
