--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@sendgrid/mail": "^8.1.5",
     "apexcharts": "^3.36.3",
     "axios": "^1.8.4",
@@ -18,12 +19,14 @@
     "feather-icons-react": "0.5.0",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
+    "jsbarcode": "^3.12.1",
     "lord-icon-element": "^3.4.4",
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
     "next": "^15.3.2",
     "next-auth": "^4.10.3",
     "papaparse": "^5.4.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.0",
     "react-countup": "^6.3.1",
@@ -45,9 +48,11 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jsbarcode": "^3.11.4",
     "@types/node": "^22.15.18",
     "@types/papaparse": "^5.3.7",
     "@types/prop-types": "^15.7.14",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19.1.4",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^19.1.5",
