--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lord-icon-element": "^3.4.4",
     "lottie-web": "^5.9.6",
     "moment": "^2.29.4",
-    "next": "^15.3.2",
+    "next": "15.3.6",
     "next-auth": "^4.10.3",
     "papaparse": "^5.4.0",
     "qrcode": "^1.5.4",
