--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "next": "15.3.8",
     "next-auth": "^4.10.3",
+    "nuqs": "^2.8.6",
     "papaparse": "^5.4.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
