chore: Update dependencies to latest versions for improved stability and performance

--- a/package.json
+++ b/package.json
@@ -12,60 +12,60 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@react-pdf/renderer": "4.3.0",
-    "@sendgrid/mail": "8.1.5",
-    "apexcharts": "3.36.3",
-    "axios": "1.8.4",
-    "bootstrap": "5.3.5",
-    "exceljs": "4.4.0",
+    "@react-pdf/renderer": "^4.3.2",
+    "@sendgrid/mail": "^8.1.6",
+    "apexcharts": "^3.36.3",
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.5",
+    "exceljs": "^4.4.0",
     "feather-icons-react": "0.5.0",
-    "firebase": "9.13.0",
-    "formik": "2.2.9",
-    "jsbarcode": "3.12.1",
-    "lord-icon-element": "3.4.4",
-    "lottie-web": "5.9.6",
-    "moment": "2.29.4",
+    "firebase": "^9.13.0",
+    "formik": "^2.4.9",
+    "jsbarcode": "^3.12.1",
+    "lord-icon-element": "^3.4.4",
+    "lottie-web": "^5.9.6",
+    "moment": "^2.29.4",
     "next": "15.3.8",
-    "next-auth": "4.10.3",
-    "nuqs": "2.8.6",
-    "papaparse": "5.4.0",
-    "qrcode": "1.5.4",
-    "react": "18.3.1",
-    "react-apexcharts": "1.4.0",
-    "react-countup": "6.3.1",
-    "react-csv": "2.2.2",
-    "react-data-table-component": "7.5.3",
-    "react-debounce-input": "3.3.0",
-    "react-dom": "18.3.1",
-    "react-dropzone": "14.2.3",
-    "react-flatpickr": "3.10.13",
-    "react-select": "5.10.1",
-    "react-toastify": "9.0.8",
-    "reactstrap": "9.1.4",
-    "sass": "1.54.9",
-    "simplebar-react": "2.4.1",
-    "socket.io-client": "4.8.1",
-    "styled-components": "5.3.6",
-    "swr": "1.3.0",
-    "yup": "0.32.11"
+    "next-auth": "^4.24.13",
+    "nuqs": "^2.8.6",
+    "papaparse": "^5.4.0",
+    "qrcode": "^1.5.4",
+    "react": "^18.3.1",
+    "react-apexcharts": "^1.4.0",
+    "react-countup": "^6.3.1",
+    "react-csv": "^2.2.2",
+    "react-data-table-component": "^7.5.3",
+    "react-debounce-input": "^3.3.0",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
+    "react-flatpickr": "^3.10.13",
+    "react-select": "^5.10.1",
+    "react-toastify": "^9.0.8",
+    "reactstrap": "^9.1.4",
+    "sass": "^1.54.9",
+    "simplebar-react": "^2.4.1",
+    "socket.io-client": "^4.8.3",
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "5.2.2",
-    "@types/jsbarcode": "3.11.4",
-    "@types/node": "22.15.18",
-    "@types/papaparse": "5.3.7",
-    "@types/prop-types": "15.7.14",
-    "@types/qrcode": "1.5.5",
-    "@types/react": "19.1.4",
-    "@types/react-csv": "1.1.3",
-    "@types/react-dom": "19.1.5",
-    "@types/react-flatpickr": "3.8.7",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/jsbarcode": "^3.11.4",
+    "@types/node": "^22.19.7",
+    "@types/papaparse": "^5.5.2",
+    "@types/prop-types": "^15.7.15",
+    "@types/qrcode": "^1.5.6",
+    "@types/react": "^19.2.9",
+    "@types/react-csv": "^1.1.10",
+    "@types/react-dom": "^19.2.3",
+    "@types/react-flatpickr": "^3.8.11",
     "autoprefixer": "10.4.5",
     "eslint": "8.23.1",
-    "eslint-config-next": "14.2.28",
-    "postcss": "8.4.16",
-    "prettier": "3.5.3",
-    "typescript": "5.8.3"
+    "eslint-config-next": "^14.2.35",
+    "postcss": "^8.5.6",
+    "prettier": "^3.8.1",
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
