--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -25,7 +25,7 @@
     "lord-icon-element": "3.4.4",
     "lottie-web": "5.13.0",
     "moment": "2.30.1",
-    "next": "15.3.8",
+    "next": "16.1.6",
     "next-auth": "4.24.13",
     "nuqs": "2.8.8",
     "papaparse": "5.5.3",
@@ -56,13 +56,13 @@
     "@types/papaparse": "5.5.2",
     "@types/prop-types": "15.7.15",
     "@types/qrcode": "1.5.6",
-    "@types/react": "19.2.13",
+    "@types/react": "18.3.28",
     "@types/react-csv": "1.1.10",
-    "@types/react-dom": "19.2.3",
+    "@types/react-dom": "18.3.7",
     "@types/react-flatpickr": "3.8.11",
     "autoprefixer": "10.4.24",
-    "eslint": "8.23.1",
-    "eslint-config-next": "14.2.35",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.6",
     "postcss": "8.5.6",
     "prettier": "3.8.1",
     "typescript": "5.9.3"
