--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "reactstrap": "9.2.3",
     "sass": "1.97.3",
     "simplebar-react": "2.4.3",
+    "snarkdown": "^2.0.0",
     "socket.io-client": "4.8.3",
     "styled-components": "5.3.11",
     "swr": "1.3.0",
